@@ -98,7 +98,7 @@ class AjaxCachePolicy {
 			
 
 function wfSajaxSearch( $term ) {
-	global $wgContLang, $wgAjaxCachePolicy;
+	global $wgContLang, $wgAjaxCachePolicy, $wgOut;
 	$limit = 16;
 	
 	$l = new Linker;
@@ -140,7 +140,7 @@ function wfSajaxSearch( $term ) {
 	return '<div style="float:right; border:solid 1px black;background:gainsboro;padding:2px;"><a onclick="Searching_Hide_Results();">' 
 		. wfMsg( 'hideresults' ) . '</a></div>'
 		. '<h1 class="firstHeading">'.wfMsg('search')
-		. '</h1><div id="contentSub">'.wfMsg('searchquery', $term) . '</div><ul><li>'
+		. '</h1><div id="contentSub">'. $wgOut->parse( wfMsg( 'searchsubtitle', $term ) ) . '</div><ul><li>'
 		. $l->makeKnownLink( $wgContLang->specialPage( 'Search' ),
 					wfMsg( 'searchcontaining', $term ),
 					"search=$term&fulltext=Search" )
